envoi de fichier p2p ok fix image messages border-radius chat display on firefox

--- a/client/components/chat/chat.less
+++ b/client/components/chat/chat.less
@@ -1,7 +1,6 @@
 #chat{
   width: 100%;
   height: 100%;
-  margin-bottom: 10em;
   margin-left: -1px;
 
   .message-list{
@@ -17,8 +16,7 @@
     flex-basis: 10em;
     -webkit-flex-basis: 10em;
     min-height: 10em;
-    width: 50%;
-    position: fixed;
+    width: 100%;
     bottom: 0;
   }
 
@@ -84,8 +82,12 @@
 
   .message-content > img {
     transform: scaleX(-1);
-    border-radius: 0 0.2em 0.2em 0.2em;
+    border-radius: 0.2em 0 0.2em 0.2em;
     box-shadow: 0 0 5px 0 rgba(0,0,0,0.4);
+  }
+
+  .myMsg .message-content > img {
+    border-radius: 0 0.2em 0.2em 0.2em;
   }
 
   .message-content {
@@ -96,7 +98,6 @@
     text-align:left;
     width:100%;
     font-weight:bold;
-    font-size:0.8em;
     margin-bottom: 0.3em;
     color: #888;
     font-size: 0.75em;
